--- a/security_council.html
+++ b/security_council.html
@@ -21,7 +21,7 @@
         
         <main>
             <div class="region-section">
-                <h2>الدول الأعضاء (15 دولة)</h2>
+                <h2>الدول الأعضاء</h2>
                 <div class="countries-grid" id="security">
                     <div class="country-item">
                         <input type="checkbox" id="sc_china" value="الصين" data-flag="🇨🇳" data-index="1">
