--- a/human_rights_council.html
+++ b/human_rights_council.html
@@ -21,7 +21,7 @@
         
         <main>
             <div class="region-section">
-                <h2>الدول الأعضاء (47 دولة)</h2>
+                <h2>الدول الأعضاء</h2>
                 <div class="countries-grid" id="human_rights">
                     <div class="country-item">
                         <input type="checkbox" id="hr_benin" value="بنين" data-flag="🇧🇯" data-index="1">
