--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مجالس الأمم المتحدة</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@3.5.0/css/flag-icon.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,13 +17,13 @@
         
         <main>
             <div class="council-buttons">
-                <button class="council-btn" onclick="navigateToCouncil('human_rights')">
-                    <div class="btn-icon">🏛️</div>
+                <button class="council-btn" onclick="window.location.href='human_rights_options.html'">
+                    <img src="HR_transparent.png" alt="Human Rights Council Icon" class="council-icon">
                     <div class="btn-text">مجلس حقوق الإنسان</div>
                 </button>
                 
-                <button class="council-btn" onclick="navigateToCouncil('security')">
-                    <div class="btn-icon">🛡️</div>
+                <button class="council-btn" onclick="window.location.href='security_options.html'">
+                    <img src="SC_transparent.png" alt="Security Council Icon" class="council-icon">
                     <div class="btn-text">مجلس الأمن</div>
                 </button>
             </div>
@@ -31,4 +33,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
