--- a/test/human_rights_voting_results.html
+++ b/test/human_rights_voting_results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>نتائج التصويت - مجلس حقوق الإنسان</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fi-css/4.1.5/css/fis.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@3.5.0/css/flag-icon.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +12,7 @@
     <div class="container">
         <header>
             <h1>نتائج التصويت - مجلس حقوق الإنسان</h1>
-            <p>(47 دولة)</p>
+            <p>(40 دولة)</p>
         </header>
         
         <div class="controls">
