Change button text from 'قائمة التصويت' to 'نتائج التصويت'

--- a/test/human_rights_voting.html
+++ b/test/human_rights_voting.html
@@ -17,7 +17,7 @@
         
         <div class="controls">
             <button class="control-btn" onclick="resetVoting('human_rights')">إعادة تعيين جميع الاختيارات</button>
-            <button class="control-btn primary" onclick="showVotingResult('human_rights')">قائمة التصويت</button>
+            <button class="control-btn primary" onclick="showVotingResult('human_rights')">نتائج التصويت</button>
             <button class="control-btn secondary" onclick="window.location.href='human_rights_options.html'">العودة</button>
         </div>
 
