--- a/test/security_council_voting.html
+++ b/test/security_council_voting.html
@@ -17,7 +17,7 @@
         
         <div class="controls">
             <button class="control-btn" onclick="resetVoting('security')">إعادة تعيين جميع الاختيارات</button>
-            <button class="control-btn primary" onclick="showVotingResult('security')">قائمة التصويت</button>
+            <button class="control-btn primary" onclick="showVotingResult('security')">نتائج التصويت</button>
             <button class="control-btn secondary" onclick="window.location.href='security_options.html'">العودة</button>
         </div>
 
